<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_uwb_follower</name>
  <version>0.1.0</version>
  <description>UWB-guided Go2 EDU following controller -- reads ESP32 serial data (distance + azimuth) and publishes Move commands via ROS2 /api/sport/request</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>unitree_api</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
